# gps-vhal

./: README.md
.github/workflows/: run_ci_checks.yaml  scorecard.yml
audio/: README.md
audio/aicaudio/: AicAudioRecord.cpp  AicAudioRecord.h  Android.mk  SocketServer.cpp  SocketServer.h  main.cpp
audio/host_audio_client/: CMakeLists.txt
audio/host_audio_client/src/: audio.h  host_audio_in_client.c  host_audio_in_client_unix.c  host_audio_out_client.c
audio/virtualaudio/: Android.mk  audio_hw.c
camera/host_camera_client/src/: camera-common.h  camera-format-converters.h
camera/virtualcamera/: .clang-format  Alignment.h  Android.mk  CallbackNotifier.cpp  CallbackNotifier.h  CameraSocketCommand.h  CameraSocketServerThread.cpp  CameraSocketServerThread.h  Converters.cpp  Converters.h  Exif.cpp  Exif.h  GrallocModule.h  JpegCompressor.cpp  JpegCompressor.h  PreviewWindow.cpp  PreviewWindow.h  RemoteClient.cpp  RemoteClient.h  Thumbnail.cpp  Thumbnail.h  VirtualBaseCamera.cpp  VirtualBaseCamera.h  VirtualBuffer.h  VirtualCamera.cpp  VirtualCamera.h  VirtualCamera2.cpp  VirtualCamera2.h  VirtualCamera3.cpp  VirtualCamera3.h  VirtualCameraCommon.h  VirtualCameraDevice.cpp  VirtualCameraDevice.h  VirtualCameraFactory.cpp  VirtualCameraFactory.h  VirtualCameraHal.cpp  VirtualCameraHotplugThread.cpp  VirtualCameraHotplugThread.h  VirtualFakeCamera.cpp  VirtualFakeCamera.h  (+18 more)
gnss/: Android.bp  LICENSE  agnss.cpp  agnss.h  android.hardware.gnss@2.0-service.cic_cloud.rc  data_sink.cpp  data_sink.h  gnss.cpp  gnss.h  gnss_configuration.cpp  gnss_configuration.h  gnss_hw_conn.cpp  gnss_hw_conn.h  gnss_hw_listener.cpp  gnss_hw_listener.h  gnss_measurement.cpp  gnss_measurement.h  main.cpp  util.cpp  util.h
gps/: README.md
gps/gpstest/: build.gradle
gps/host_gps_client/: CMakeLists.txt
gps/virtualgps/: gps_virtual.c
host_gps_client/src/: host_gps_client.c
input/host_input_client/: CMakeLists.txt  DirectInput.cpp  DirectInput.h  host_input_client.cpp  input_interface.h
sensors/: Android.mk  remote_sensors.cpp  sensor_hal.cpp  sensor_interfaces.h
virtualgps/: Android.mk  gps_virtual.c
(+34 files in other folders)
